# hyperstrike

./: .gitignore  README.md  how --name-only 11b0e179  package-lock.json  start-prod.sh  start.sh  test.py
backend/: .env  .env.template  .gitignore  .railwayignore  HYPERCORE_SETUP.md  README.md  TRIGGER_SYSTEM.md  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  start.sh  test_hypercore_db.py  test_triggers.py
backend/app/: main.py
backend/app/auth/: challenge.py  jwt.py  privy.py  routers.py  service_jwt.py  session.py  signature.py
backend/app/contracts/: README.md  package-lock.json  package.json
backend/app/db/: sb.py
backend/app/models/: hypercore.py  order.py  trigger.py  wallet.py
backend/app/routers/: hypercore.py  hyperliquid_api.py  orders.py  triggers.py  wallet.py  xp.py
backend/app/services/: candle_watcher.py  eth_feed.py  gluex.py  hypercore.py  mappings.py  orders.py  startup_service.py  swap.py  trigger_processor.py  triggers.py  user.py  wallet.py
backend/app/utils/: CONTRACT.json  ERC20.json  name_coin_mapping.json  notifications.py
backend/contracts/: .env.template  FLOWCHART_ANALYSIS.md  IWHYPE.sol  PriceTriggerSwap.sol  README.md  deploy.js  hardhat.config.js  package-lock.json  package.json
backend/contracts/cache/: console-history.txt  solidity-files-cache.json
backend/contracts/contracts/: PriceTriggerSwap.sol  PriceTriggerSwapV2.sol  WHYPE.sol  main.sol
backend/contracts/dummy/: Allowance.py  HyperliquidTrader.py  Withdraw.py  WrapHype.py  requirements.txt  test_withdraw_trigger.py  usdc_allowance.py  (+1 more)
(+77 files in other folders)
