[tool.poetry]
name = "Hyperstrike"
version = "0.1.0"
description = ""
authors = ["Tsatsch <sshsmnv2000@gmail.com>"]
readme = "README.md"
packages = [
    {include = "app"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
websockets = ">=15.0.1,<16.0.0"
aiohttp = ">=3.12.15,<4.0.0"
supabase = {git = "https://github.com/supabase-community/supabase-py.git"}
python-dotenv = "^1.0.0"
pyjwt = ">=2.10,<3.0"
requests = ">=2.31,<3.0"
cryptography = ">=42,<45"
eth-account = ">=0.10.0,<1.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
